test/e2e/pass/runtime/runtime_result_function.cst
fn main() {
    let key: &str = "PATH";
    let value: runtime str = env(key);
    let _ = value;
}
