test/e2e/fail_compile/type_errors/ct_required_struct_field_unsupported.cst
struct Config {
    limit: const num,
}

fn main() {
    let _ = Config { limit: 1 };
}
